# gifsync

./: .dockerignore  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Dockerfile_db  Dockerfile_web  LICENSE.txt  Procfile  README.md  config.py  db_template.sql  docker-compose.postgres.yml  docker-compose.yml  heroku.yml  initdb.sh  mypy.ini  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
db_backup/: backup-script.sh  gifsync-backup.sql
gifsync/: __init__.py  app.py  config.py  extensions.py  forms.py  util.py
gifsync/api/: routes.py
gifsync/core/: routes.py
gifsync/core/templates/: home.html  privacy.html
gifsync/models/: forms.py  gifs.py  songs.py  users.py
gifsync/static/: keybase.txt
gifsync/static/css/: collection.css  create.css  error.css  home.css  preferences.css  show.css  skeleton.css
gifsync/static/js/: timeoutFlashes.js  updateFileChooser.js
gifsync/static/styles/: about.css  home.css  main.css  skeleton.css
gifsync/templates/: about.html  collection.html  create.html  error.html  home.html  layout.html  preferences.html  privacy.html  show.html  skeleton.html
gifsync/user/: routes.py
nginx/: default.conf
tests/: test_app.py
